[package]
name = "ue7"
version = "0.1.0"
authors = ["Adrodoc <adrodoc55@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["std"], default-features = false }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
